# fastid-benchmark

./: .env.example  .gitignore  CITATION.cff  Makefile  README.md  REPORT.md  SECURITY.md  docker-compose.yml  pyproject.toml
analyzer/: config.py  insights.py  main.py  utils.py
analyzer/plots/: baseline_latency_vs_cores.py  boxplot_latency.py  comparative_bar.py  latency_distribution.py  latency_vs_cores.py  latency_vs_throughput.py  rps_vs_cores.py  rps_vs_users.py  scalability_heatmap.py  scalability_table.py  time_series.py
cpu_env/: .env.cpu1  .env.cpu16  .env.cpu2  .env.cpu4  .env.cpu8
fastid_benchmark/: config.py  gen_tokens.py  get_token.py  parsing.py  test_token.py  test_userinfo.py
report/: aggregated_results.csv  insights.md  max_performance_summary.csv  scalability_table.csv  scalability_table.txt
results/cpu_1/: authentik_100_10_60.html  authentik_100_10_60_stats.csv  authentik_100_10_60_stats_history.csv  fastid_1000_50_120.html  fastid_1000_50_120_stats.csv  fastid_1000_50_120_stats_history.csv  fastid_100_10_60.html  fastid_100_10_60_stats.csv  fastid_100_10_60_stats_history.csv  fastid_2000_50_120.html  fastid_2000_50_120_stats.csv  fastid_2000_50_120_stats_history.csv  fastid_500_25_90.html  fastid_500_25_90_stats.csv  fastid_500_25_90_stats_history.csv  keycloak_1000_50_120.html  keycloak_1000_50_120_stats.csv  keycloak_1000_50_120_stats_history.csv  keycloak_100_10_60.html  keycloak_100_10_60_stats.csv  keycloak_100_10_60_stats_history.csv  keycloak_2000_50_120.html  (+5 more)
scripts/: authentik_time.sh  init-db.sql  keycloak_time.sh
(+129 files in other folders)
